Website for a small business using jQuery and AJAX
This is a complete mockup of a static website.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <meta name="description" content="Cleaning Bees provides residential and small business customers with cleaning services in Madison, WI since 2007.">
         <title>Cleaning Bees: Home</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-        <!-- <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/fb3463c7-0525-49ee-aa70-5c1eae929782.css"/> -->
+        <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/fb3463c7-0525-49ee-aa70-5c1eae929782.css"/>
         <link rel="stylesheet" type="text/css" href="styles/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="//fast.fonts.net/jsapi/fb3463c7-0525-49ee-aa70-5c1eae929782.js"></script>
+        <!-- <script type="text/javascript" src="//fast.fonts.net/jsapi/fb3463c7-0525-49ee-aa70-5c1eae929782.js"></script> -->
     </head>
     <body>
         <div class="container">
@@ -30,23 +30,22 @@
                             <span class="icon-bar"></span>
                         </button>
 
-                        <a class="navbar-brand" href="#">Cleaning Bees</a>
+                        <a class="navbar-brand" href="index.html">Cleaning Bees</a>
 
                     </div>
 
                     <div class="collapse navbar-collapse" id="siteNavbar">
                         <ul class="nav navbar-nav">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Company</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Estimates</a></li>
-                            <li><a href="#">Contacts</a></li>
-                            <li><a href="#">Help</a></li>
+                            <li><a href="company.html">Company</a></li>
+                            <li><a href="services.html">Services</a></li>
+                            <li><a href="plans.html">Plans</a></li>
+                            <li><a href="help.html">Help</a></li>
+                            <li><a href="contact.html">Contact</a></li>
                         </ul>
 
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign up</a></li>
-                            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
+                            <li><a href="sign-up.html"><span class="glyphicon glyphicon-user"></span> Sign up</a></li>
+                            <li><a href="log-in.html"><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
                         </ul>
 
                     </div>
@@ -54,22 +53,26 @@
             </nav>
             <div class="row">
                 <div class="col-sm-4">
-                    <h2>Company</h2>
-                    <p>We provide high quality housecleaning, store cleaning, and office cleaning services, yet we make those affordable even for a moderate budget.</p>
-                </div>
-                <div class="col-sm-4">
                     <h2>Services</h2>
-                    <p>Our services are available on daily, weekly, or bi-weekly basis. We are available 24/7 for all your needs.</p>
+                    <p>We stand strongly by the quality of our <a href="services.html">services</a>. We use only professional equipment and supplies to ensure you get the best possible results. All our services are fully insured and bonded so we've got you covered under any circumstances.</p>
+                    <a class="btn btn-default" role="button" href="services.html">Learn more &rarr;</a>
                 </div>
                 <div class="col-sm-4">
-                    <h2>Contact</h2>
-                    <p>Request a free quote or more information about our services by sending us a message from the Contact page.</p>
+                    <h2>Plans</h2>
+                    <p>We currently offer two recurring no-commitment <a href="plans.html">plans</a>. You can request our team to come in for cleaning your home or office every week or every two weeks. In addition, our clients can always request our team to perform special services.</p>
+                    <a class="btn btn-default" role="button" href="plans.html">Learn more &rarr;</a>
+                </div>
+                <div class="col-sm-4">
+                    <h2>Sign up</h2>
+                    <p>Requesting a service estimate from Cleaning Bees is easy and free. Get a quote for cleaning your home or office by sending us a message from the <a href="contact.html">Contact</a> page. Please select Estimate request from the Subject dropdown in the message form.</p>
+                    <a class="btn btn-default" role="button" href="contact.html">Learn more &rarr;</a>
                 </div>
             </div>
         </div>
         <footer class="footer">
                 <div class="container">
-                    <p class="text-muted">&copy;2016 Cleaning Bees</p>
+                    <hr>
+                    <p class="text-muted">&copy; 2016 Cleaning Bees</p>
                 </div>
         </footer>
     </body>
