--- a/plans.html
+++ b/plans.html
@@ -4,7 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Cleaning Bees provides residential and small business customers with cleaning services in Madison, WI since 2007.">
-        <title>Cleaning Bees: Company</title>
+        <title>Cleaning Bees: Plans</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/fb3463c7-0525-49ee-aa70-5c1eae929782.css"/>
         <link rel="stylesheet" type="text/css" href="styles/style.css">
@@ -53,10 +53,11 @@
             </nav>
             <div class="row">
                 <div class="col-sm-8">
-                    <h1>Company</h1>
+                    <h1>Plans</h1>
                     <p class="lead">Curabitur maximus luctus dolor nec dignissim. Aliquam vitae iaculis arcu, non cursus sem. Praesent in blandit diam, nec volutpat ipsum. Nunc pellentesque luctus enim ac consequat. Vivamus interdum sapien vitae nibh pulvinar vehicula. Curabitur sit amet consequat mauris.</p>
+                    <h2>Weekly</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pretium magna id urna semper, sed facilisis purus laoreet. Curabitur dictum blandit ipsum, ut aliquet quam maximus non. Duis at blandit risus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed molestie lorem eros, rutrum viverra nunc pellentesque eget. Curabitur maximus luctus dolor nec dignissim. Aliquam vitae iaculis arcu, non cursus sem. Praesent in blandit diam, nec volutpat ipsum. Nunc pellentesque luctus enim ac consequat. Vivamus interdum sapien vitae nibh pulvinar vehicula. Curabitur sit amet consequat mauris. Donec tristique nisl quis nulla ultrices, nec convallis justo lobortis. Nullam eros sem, facilisis ac ultricies vel, viverra convallis ex. Suspendisse nec quam vel sem pharetra pharetra eu ac massa. Ut a purus sapien.</p>
-                    <h2>History</h2>
+                    <h2>Bi-weekly</h2>
                     <p>Donec a aliquet mauris. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus mollis, nisi eu efficitur tincidunt, purus nisi ultrices tellus, in tristique mi leo id ligula. Sed leo nisl, fringilla et vestibulum quis, porta sed justo. Integer at magna a purus pulvinar elementum id in nibh. Nulla dui risus, lacinia ac turpis eget, pellentesque sodales libero. Cras finibus fringilla tellus quis malesuada. Duis eu viverra ex, sagittis viverra dui. Nunc id lectus sit amet lectus efficitur volutpat. Vestibulum metus metus, scelerisque ac nunc sit amet, laoreet tempus ex. Morbi id finibus enim, vitae commodo sem. Ut efficitur consequat lorem ac pulvinar. Suspendisse ultrices ullamcorper mauris. Duis in odio sed turpis consequat convallis eu eget mi.</p>
                 </div>
                 <div class="col-sm-4">
