--- a/help.html
+++ b/help.html
@@ -9,6 +9,7 @@
         <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/fb3463c7-0525-49ee-aa70-5c1eae929782.css"/>
         <link rel="stylesheet" type="text/css" href="styles/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <!-- <script type="text/javascript" src="//fast.fonts.net/jsapi/fb3463c7-0525-49ee-aa70-5c1eae929782.js"></script> -->
     </head>
